--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <div class = "back">
+            <button id="btn99" class="btn" type="button" onclick="history.back()">back</button>
+        </div>
     <!-- 見出し（みだし） -->
     <header class = "header">
       <h1>Webアプリ作成にチャレンジ中</h1>
@@ -97,4 +100,5 @@
     </footer>
 
   </body>
+
 </html>
